--- a/mypy.ini
+++ b/mypy.ini
@@ -7,3 +7,5 @@ namespace_packages = True
 ignore_missing_imports = True
 [mypy-firebase_admin.*]
 ignore_missing_imports = True
+[mypy-auth0.*]
+ignore_missing_imports = True
