--- a/requirements.txt
+++ b/requirements.txt
@@ -32,8 +32,10 @@ pycparser==2.22
 pydantic==2.10.3
 pydantic_core==2.27.1
 PyJWT==2.10.1
+PyMySQL==1.1.1
 requests==2.32.3
 sniffio==1.3.1
+SQLAlchemy==2.0.36
 tqdm==4.67.1
 types-Flask-Cors==5.0.0.20240902
 typing_extensions==4.12.2
