--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ anyio==4.7.0
 attrs==24.3.0
 auth0-python==4.7.2
 blinker==1.9.0
+cachetools==5.5.0
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.0
@@ -15,6 +16,17 @@ distro==1.9.0
 Flask==3.1.0
 Flask-Cors==5.0.0
 frozenlist==1.5.0
+google-api-core==2.24.0
+google-auth==2.37.0
+google-cloud-core==2.4.1
+google-cloud-secret-manager==2.22.0
+google-cloud-storage==2.19.0
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+grpc-google-iam-v1==0.13.1
+grpcio==1.68.1
+grpcio-status==1.68.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -28,12 +40,17 @@ mypy==1.13.0
 mypy-extensions==1.0.0
 openai==1.58.1
 propcache==0.2.1
+proto-plus==1.25.0
+protobuf==5.29.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.3
 pydantic_core==2.27.1
 PyJWT==2.10.1
 PyMySQL==1.1.1
 requests==2.32.3
+rsa==4.9
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 tqdm==4.67.1
