--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,7 @@ python_version = 3.13
 strict = True
 check_untyped_defs = True
 namespace_packages = True
+plugins = sqlalchemy.ext.mypy.plugin
 [mypy-google.cloud.*]
 ignore_missing_imports = True
 [mypy-firebase_admin.*]
