--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ fastapi-cli==0.0.7
 frozenlist==1.5.0
 google-api-core==2.24.0
 google-auth==2.37.0
+google-auth-stubs==0.3.0
 google-cloud-core==2.4.1
 google-cloud-secret-manager==2.22.0
 google-cloud-storage==2.19.0
@@ -27,6 +28,7 @@ google-crc32c==1.6.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.66.0
 grpc-google-iam-v1==0.13.1
+grpc-stubs==1.53.0.5
 grpcio==1.68.1
 grpcio-status==1.68.1
 h11==0.14.0
@@ -75,6 +77,7 @@ SQLAlchemy @ git+https://github.com/sqlalchemy/sqlalchemy.git@6a87d619d9dfe82a81
 starlette==0.41.3
 tqdm==4.67.1
 typer==0.15.1
+types-requests==2.32.0.20241016
 typing_extensions==4.12.2
 ujson==5.10.0
 urllib3==2.2.3
