--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ google-auth-stubs==0.3.0
 google-cloud-core==2.4.1
 google-cloud-secret-manager==2.22.0
 google-cloud-storage==2.19.0
+google-cloud-tasks==2.18.0
 google-crc32c==1.6.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.66.0
