--- a/terraform/api_gateway.yaml
+++ b/terraform/api_gateway.yaml
@@ -136,6 +136,28 @@ paths:
           schema:
             type: object
             additionalProperties: false
+  /documents/{id}/openai_messages:
+    post:
+      operationId: createOpenaiMessage
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+        - name: question
+          in: formData
+          required: true
+          type: string
+      responses:
+        200:
+          description: return answer
+          schema:
+            type: object
+            properties:
+              answer:
+                type: string
+            required:
+              - answer
   /documents/pre_signed_upload_url:
     post:
       operationId: documentPreSignedUploadUrl
