--- a/terraform/api_gateway.yaml
+++ b/terraform/api_gateway.yaml
@@ -2,7 +2,7 @@ swagger: "2.0"
 info:
   title: PDF Assistant API
   version: "1.0.0"
-host: "api-gateway-a55kw77s.an.gateway.dev"
+host: "api-gateway-7nwm7l18.an.gateway.dev"
 schemes:
   - "https"
 produces:
@@ -10,7 +10,7 @@ produces:
 basePath: "/"
 
 x-google-backend:
-  address: https://api-794862978184.asia-northeast1.run.app
+  address: https://pdf-assistant-api-600587365436.asia-northeast1.run.app
   path_translation: APPEND_PATH_TO_ADDRESS
 
 securityDefinitions:
@@ -20,9 +20,9 @@ securityDefinitions:
     type: "oauth2"
     x-google-issuer: "https://dev-im6sd3gmyj703h6n.us.auth0.com/"
     x-google-jwks_uri: "https://dev-im6sd3gmyj703h6n.us.auth0.com/.well-known/jwks.json"
-    x-google-audiences: "https://api-gateway-a55kw77s.an.gateway.dev"
+    x-google-audiences: "https://api-gateway-7nwm7l18.an.gateway.dev"
 security:
-  - auth0_jwk: []
+  - auth0_jwk: [ ]
 
 paths:
   /me:
