--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
         python -m venv venv
         source venv/bin/activate
         pip install -r requirements.txt
-        pytest
+        mypy . && pytest
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - build
