--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
       - |
         python -m venv venv
         source venv/bin/activate
-        pip install -r requirements.txt
+        pip install poetry && poetry install
         mypy . && pytest
   - name: 'gcr.io/cloud-builders/docker'
     args:
