--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13,<4"
 dependencies = [
-    "sqlalchemy @ git+https://github.com/sqlalchemy/sqlalchemy.git@6a87d619d9dfe82a8135f0ab3268bf526ac42383",
     "aiohappyeyeballs (==2.4.4)",
     "aiohttp (==3.11.11)",
     "aiosignal (==1.3.2)",
@@ -99,6 +98,7 @@ dependencies = [
     "websockets (==14.1)",
     "werkzeug (==3.1.3)",
     "yarl (==1.18.3)",
+    "sqlalchemy (>=2.0.37,<3.0.0)",
 ]
 
 
