--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ dependencies = [
     "werkzeug (==3.1.3)",
     "yarl (==1.18.3)",
     "sqlalchemy (>=2.0.37,<3.0.0)",
+    "dependency-injector (>=4.45.0,<5.0.0)",
 ]
 
 
@@ -114,6 +115,8 @@ package-mode = false
 [tool.mypy]
 python_version = "3.13"
 strict = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
 namespace_packages = true
 plugins = ["sqlalchemy.ext.mypy.plugin"]
 exclude = "(^|/|\\\\)venv($|/|\\\\)"
