--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,8 @@ dependencies = [
     "yarl (==1.18.3)",
     "sqlalchemy (>=2.0.37,<3.0.0)",
     "dependency-injector (>=4.45.0,<5.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "greenlet (>=3.1.1,<4.0.0)",
 ]
 
 
