--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,7 @@ dependencies = [
     "asyncpg (>=0.30.0,<0.31.0)",
     "greenlet (>=3.1.1,<4.0.0)",
     "google-cloud-firestore (>=2.20.0,<3.0.0)",
+    "pdfminer-six (>=20240706,<20240707)",
 ]
 
 
